@@ -28,6 +28,7 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.9<br/>
+          [BEAM-1291] Virtual bands may compute wrong results for non-zero levels of image pyramids<br/>
           [BEAM-1288] Add plausibility check for reprojection and orthorectification<br/>
           [BEAM-1251] Allow setting start and stop time<br/>
           [BEAM-1248] Title of transect-plot dialog is not updated if band selection changes<br/>
